fix: change gap property in socials

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -16,7 +16,7 @@ footer {
   gap: 30px;
 
   @media screen and (max-width: 480px) {
-    gap: 25px;
+    gap: 15px;
   }
 
 
